--- a/style.css
+++ b/style.css
@@ -268,9 +268,10 @@ body:before {
     width: 100%;
     position: absolute;
     inset: 0;
+	z-index: -1;
 }
 
-.container {width: min(90vw, 1580px);}
+.container {width: min(96vw, 1580px);}
 .inner {width: min(1200px, 95%); margin: 0 auto; z-index: 1;}
 footer .inner:first-child {padding-top: 120px;}
 
@@ -340,6 +341,10 @@ footer svg{width: 40px;height: 40px;}
 
 
 /* Media Queries. Use these, modify breakpoints, add, or delete.  */
+@media (max-width: 1200px) {
+.container {
+    /* width: 100%; */
+}
 
 @media (max-width: 1000px){
     .half-1000 { width: 50%; }
