--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ footer svg {width: 40px;height: 40px;}
 }
 @media (max-width: 600px){
 	#mobile-submit-talk {display: flex;}
+	#submit-talk svg {margin-top: 0;}
 	#desktop-submit-talk svg{display: none;}
 	.container {width: 96vw;}
 	:root {--val-baseline: 15px;}
