--- a/style.css
+++ b/style.css
@@ -305,6 +305,15 @@ h5 {font-size: calc(.75 * var(--val-baseline));font-weight: 700; color:var(--col
 
 header.grad {z-index: auto;}
 
+#header-sticky {position: fixed;z-index: 10;height: 160px;width: 100%;}
+#header-sticky .foo div img {width: 40%;}
+#header-sticky .container, #header-sticky .foo, #header-sticky .foo > div  {height: 100%;}
+#header-sticky .foo {width: 100%; margin-top:-20px}
+#header-sticky .foo > div {width: 90%;position: absolute;left: 5%;top: 0;}
+#header-sticky .foo svg {width: 100%;position: absolute;top: -60px;}
+#header-sticky .foo, #header-sticky .grad:before {background-image: none}
+svg#sticky1 {top: -50px !important;}
+
 .grad h4, .grad h3, .grad h2 {color: white!important;}
 
 .eye {position: absolute; height: 130%; width: 100%; 	top: -140px;background-image: url(img/eye-texture.svg);background-repeat: no-repeat;background-size: contain;background-position:right}
@@ -349,6 +358,7 @@ footer svg {width: 40px;height: 40px;}
 	.eye {top: -230px;}
 }
 @media (max-width: 800px){
+	#header-sticky {top: -10px;}
     .half-800 { width: 50%; }
     .full-800 { float: none; width: 100%; display: block; }
 	.no-flex-800 { display: inherit;}
@@ -356,6 +366,7 @@ footer svg {width: 40px;height: 40px;}
 	.eye {top: -270px;}
 }
 @media (max-width: 600px){
+	#header-sticky {top: -25px;}
 	#mobile-submit-talk {display: flex;}
 	#submit-talk svg {margin-top: 0;}
 	#desktop-submit-talk svg{display: none;}
@@ -373,6 +384,7 @@ footer svg {width: 40px;height: 40px;}
 
 }
 @media (max-width: 500px){
+	#header-sticky {top: -38px;}
     .half-500 { width: 50%; }
     .full-500 { float: none; width: 100%; display: block; }
 	.no-flex-500 { display: inherit;}
@@ -380,6 +392,7 @@ footer svg {width: 40px;height: 40px;}
 	.lower-footer .flex-row {flex-direction: column;}
 }
 @media (max-width: 400px){
+	#header-sticky {top: -44px;}
     .half-400 { width: 50%; }
     .full-400 { float: none; width: 100%; display: block; }
     .no-flex-400 { display: inherit;}
