--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body:before {
 	z-index: -1;
 }
 
-.container {width: min(96vw, 1580px);}
+.container {width: min(96vw, 1500px);}
 .inner {width: min(1200px, 95%); margin: 0 auto; z-index: 1;}
 footer .inner:first-child {padding-top: 120px;}
 
@@ -305,13 +305,11 @@ h5 {font-size: calc(.75 * var(--val-baseline));font-weight: 700; color:var(--col
 
 header.grad {z-index: auto;}
 
-#header-sticky {position: fixed;z-index: 10;height: 160px;width: 100%;}
-#header-sticky .foo div img {width: 40%;}
-#header-sticky .container, #header-sticky .foo, #header-sticky .foo > div  {height: 100%;}
-#header-sticky .foo {width: 100%; margin-top:-20px}
-#header-sticky .foo > div {width: 90%;position: absolute;left: 5%;top: 0;}
-#header-sticky .foo svg {width: 100%;position: absolute;top: -60px;}
-#header-sticky .foo, #header-sticky .grad:before {background-image: none}
+#header-sticky {position: fixed;z-index: 10;width:min(96vw, 1500px);}
+#header-sticky .content-container div img {width: 30%;}
+#header-sticky .content-container {width: 100%;}
+#header-sticky .content-container > div {width: 90%}
+#header-sticky .content-container svg {width: 100%;position: absolute;top: -60px;}
 svg#sticky1 {top: -50px !important;}
 
 .grad h4, .grad h3, .grad h2 {color: white!important;}
