--- a/style.css
+++ b/style.css
@@ -392,6 +392,7 @@ footer svg {width: 40px;height: 40px;}
 	.eye {top: -270px;}
 }
 @media (max-width: 600px){
+	.container {width: 100vw;}
 	#header-sticky .content-container > div {top: -50px;}
 	#header-sticky a.btn.btn--filled {display: none;}
 	#header-sticky .flex {flex-direction: row-reverse;}
