--- a/style.css
+++ b/style.css
@@ -374,7 +374,18 @@ footer svg {width: 40px;height: 40px;}
 .cell.header {background-color: white;color:var(--color-darkblue);font-weight: bold;}
 /* .cell.header:not(.row-title) {max-height: 80px;} */
 .cell.row-title {align-items: top;}
-
+.cell-item {display: block; width: 100%; padding-bottom: 10px; position: relative; border-bottom: 1px solid #165d75; margin-bottom: 10px;}
+.cell-item:last-child {border-bottom: none; margin-bottom: 0px; padding-bottom: 0px;}
+.cell-item h4 {font-size: 14px; font-weight: 300; }
+.cell-item h5 {text-transform: none; font-size: 14px;}
+.person {display: inline-block; width: 33.33%; margin-left: -4px; padding: 20px; vertical-align: top; text-align: center;}
+.person__image_grad {background-image: linear-gradient(45deg, #a3be71, #1d93b0); padding: 10px; border-radius: 4px; margin-bottom: 20px;}
+.person__image_grad img {object-fit: cover; object-position: center center; width: 100%; height: 100%; }
+.person h3 {font-size: 16px; font-weight: 700;}
+.person h4 {font-size: 14px; font-weight: 300;}
+.all-sponsors {margin-bottom: 50px;}
+.all-sponsors a {height: 130px;}
+.all-sponsors img {max-height: 100% !important;}
 /* Media Queries. Use these, modify breakpoints, add, or delete.  */
 
 @media (max-width: 1000px){
@@ -390,6 +401,7 @@ footer svg {width: 40px;height: 40px;}
 	.no-flex-800 { display: inherit;}
 	.float50 {float: none; width: 100%;}	
 	.eye {top: -270px;}
+	.person {width: 50%;}
 }
 @media (max-width: 600px){
 	.container {width: 100vw;}
@@ -429,6 +441,7 @@ footer svg {width: 40px;height: 40px;}
 	.no-flex-500 { display: inherit;}
 	.join-header {padding-top: 120px;}
 	.lower-footer .flex-row {flex-direction: column;}
+	.person {width: 100%; margin-left: 0px;} 
 }
 @media (max-width: 400px){
 	
